--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/react-calendar-heatmap": "^1.6.7",
     "@typescript-eslint/parser": "^8.7.0",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +25,7 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-calendar-heatmap": "^1.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "recharts": "^2.13.0-alpha.5",
